--- a/templates/courses_final.html
+++ b/templates/courses_final.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/global_style.css">
     <link rel="stylesheet" href="static/css/course_style.css">
 </head>
 <body>
@@ -47,7 +48,7 @@
         </div>
         <div class="sidebar-footer">
             <a class="profile-link" href="/edit-account">
-                <div class="profile-circle-sidebar">JD</div>
+                <div class="profile-circle-sidebar">{{ initials }}</div>
                 <span>Profile</span>
             </a>
             <a class="logout-link" href="/logout">
